crates/nuff_linter/src/comments/snapshots/nuff_linter__comments__shebang__tests__shebang_match.snap
---
source: crates/nuff_linter/src/comments/shebang.rs
expression: "ShebangDirective::try_extract(source)"
---
Some(
    ShebangDirective(
        "/usr/bin/env python",
    ),
)
